syntax = "proto3";

package blokus;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// ========================================
// Message Type Enumeration (Comprehensive)
// ========================================

enum MessageType {
  // Basic messages
  MESSAGE_TYPE_UNKNOWN = 0;
  
  // Authentication and Login (100-199)
  MESSAGE_TYPE_AUTH_REQUEST = 100;
  MESSAGE_TYPE_AUTH_RESPONSE = 101;
  MESSAGE_TYPE_REGISTER_REQUEST = 102;
  MESSAGE_TYPE_REGISTER_RESPONSE = 103;
  MESSAGE_TYPE_LOGOUT_REQUEST = 104;
  MESSAGE_TYPE_LOGOUT_RESPONSE = 105;
  MESSAGE_TYPE_HEARTBEAT = 106;
  MESSAGE_TYPE_WELCOME = 107;
  
  // Lobby System (200-299)
  MESSAGE_TYPE_GET_ROOM_LIST_REQUEST = 200;
  MESSAGE_TYPE_ROOM_LIST_RESPONSE = 201;
  MESSAGE_TYPE_ROOM_LIST_UPDATE = 202;
  MESSAGE_TYPE_CREATE_ROOM_REQUEST = 203;
  MESSAGE_TYPE_CREATE_ROOM_RESPONSE = 204;
  MESSAGE_TYPE_JOIN_ROOM_REQUEST = 205;
  MESSAGE_TYPE_JOIN_ROOM_RESPONSE = 206;
  MESSAGE_TYPE_LEAVE_ROOM_REQUEST = 207;
  MESSAGE_TYPE_LEAVE_ROOM_RESPONSE = 208;
  MESSAGE_TYPE_PLAYER_JOINED_NOTIFICATION = 209;
  MESSAGE_TYPE_PLAYER_LEFT_NOTIFICATION = 210;
  MESSAGE_TYPE_USER_LIST_UPDATE = 211;
  MESSAGE_TYPE_GET_USER_STATS_REQUEST = 212;
  MESSAGE_TYPE_USER_STATS_RESPONSE = 213;
  
  // Room Management (300-349)
  MESSAGE_TYPE_ROOM_STATE_UPDATE = 300;
  MESSAGE_TYPE_REMOVE_PLAYER_REQUEST = 301;
  MESSAGE_TYPE_REMOVE_PLAYER_RESPONSE = 302;
  MESSAGE_TYPE_KICK_PLAYER_REQUEST = 303;
  MESSAGE_TYPE_KICK_PLAYER_RESPONSE = 304;
  MESSAGE_TYPE_SET_PLAYER_READY_REQUEST = 305;
  MESSAGE_TYPE_SET_PLAYER_READY_RESPONSE = 306;
  MESSAGE_TYPE_START_GAME_REQUEST = 307;
  MESSAGE_TYPE_START_GAME_RESPONSE = 308;
  MESSAGE_TYPE_PLAYER_READY_NOTIFICATION = 309;
  
  // Gameplay (350-399)
  MESSAGE_TYPE_GAME_STARTED_NOTIFICATION = 350;
  MESSAGE_TYPE_TURN_CHANGED_NOTIFICATION = 351;
  MESSAGE_TYPE_PLACE_BLOCK_REQUEST = 352;
  MESSAGE_TYPE_PLACE_BLOCK_RESPONSE = 353;
  MESSAGE_TYPE_BLOCK_PLACED_NOTIFICATION = 354;
  MESSAGE_TYPE_GAME_STATE_UPDATE = 355;
  MESSAGE_TYPE_SKIP_TURN_REQUEST = 356;
  MESSAGE_TYPE_SKIP_TURN_RESPONSE = 357;
  MESSAGE_TYPE_GAME_ENDED_NOTIFICATION = 358;
  MESSAGE_TYPE_GET_GAME_STATE_REQUEST = 359;
  MESSAGE_TYPE_GAME_STATE_RESPONSE = 360;
  MESSAGE_TYPE_UNDO_MOVE_REQUEST = 361;
  MESSAGE_TYPE_UNDO_MOVE_RESPONSE = 362;
  MESSAGE_TYPE_GAME_RESET_NOTIFICATION = 363;
  
  // Chat System (400-449)
  MESSAGE_TYPE_SEND_CHAT_REQUEST = 400;
  MESSAGE_TYPE_SEND_CHAT_RESPONSE = 401;
  MESSAGE_TYPE_CHAT_NOTIFICATION = 402;
  MESSAGE_TYPE_WHISPER_MESSAGE = 403;
  MESSAGE_TYPE_SYSTEM_MESSAGE = 404;
  MESSAGE_TYPE_GET_CHAT_HISTORY_REQUEST = 405;
  MESSAGE_TYPE_CHAT_HISTORY_RESPONSE = 406;
  
  // Administration (450-499)
  MESSAGE_TYPE_ADMIN_COMMAND = 450;
  MESSAGE_TYPE_ADMIN_RESPONSE = 451;
  MESSAGE_TYPE_SERVER_ANNOUNCEMENT = 452;
  MESSAGE_TYPE_MAINTENANCE_NOTIFICATION = 453;
  
  // Statistics and Ranking (500-549)
  MESSAGE_TYPE_GET_RANKING_REQUEST = 500;
  MESSAGE_TYPE_RANKING_RESPONSE = 501;
  MESSAGE_TYPE_RANKING_UPDATE = 502;
  MESSAGE_TYPE_GAME_REPLAY_REQUEST = 503;
  MESSAGE_TYPE_GAME_REPLAY_RESPONSE = 504;
  MESSAGE_TYPE_ACHIEVEMENT_UNLOCKED = 505;
  
  // Error and Special (900-999)
  MESSAGE_TYPE_ERROR_RESPONSE = 900;
  MESSAGE_TYPE_RATE_LIMIT_EXCEEDED = 901;
  MESSAGE_TYPE_SERVER_SHUTDOWN = 902;
  MESSAGE_TYPE_RECONNECT_REQUEST = 903;
  MESSAGE_TYPE_RECONNECT_RESPONSE = 904;
  MESSAGE_TYPE_PING = 905;
  MESSAGE_TYPE_PONG = 906;
}

// ========================================
// Message Priority (QoS)
// ========================================

enum MessagePriority {
  PRIORITY_LOW = 0;      // Stats, chat etc
  PRIORITY_NORMAL = 1;   // Lobby updates, general notifications
  PRIORITY_HIGH = 2;     // Game state changes
  PRIORITY_CRITICAL = 3; // Block placement, turn changes
}

// ========================================
// Message Wrapper
// ========================================

message MessageWrapper {
  // Basic envelope fields
  MessageType type = 1;
  uint32 sequence_id = 2;          // Request-response matching
  google.protobuf.Any payload = 3;  // Actual message content
  
  // Metadata
  google.protobuf.Timestamp timestamp = 10;
  string client_version = 11;
  MessagePriority priority = 12;
  
  // Routing fields
  string target_room = 15;         // Target specific room
  string target_user = 16;         // Target specific user
  bool broadcast = 17;             // Global broadcast
  
  // Reliability options
  bool requires_ack = 20;          // Requires acknowledgment
  uint32 retry_count = 21;         // Retry attempts
  uint32 timeout_ms = 22;          // Timeout (milliseconds)
  
  // Compression and optimization
  bool compressed = 25;            // Data compression used
  string compression_type = 26;    // "gzip", "lz4" etc
  
  // Tracing and debugging
  string trace_id = 30;           // Request trace ID
  map<string, string> headers = 31; // Custom headers
}

// ========================================
// Message Acknowledgment
// ========================================

message MessageAck {
  uint32 sequence_id = 1;
  bool success = 2;
  string error_message = 3;
  google.protobuf.Timestamp received_at = 4;
}

// ========================================
// Batch Message (for multiple messages at once)
// ========================================

message BatchMessage {
  repeated MessageWrapper messages = 1;
  uint32 batch_id = 2;
  google.protobuf.Timestamp created_at = 3;
  bool ordered = 4;  // Order preservation required
}

// ========================================
// Keep Alive Messages
// ========================================

message KeepAlive {
  google.protobuf.Timestamp timestamp = 1;
  uint32 client_fps = 2;           // Client frame rate
  float network_latency_ms = 3;    // Network latency
  uint32 memory_usage_mb = 4;      // Memory usage
}

message ConnectionStatus {
  enum Status {
    CONNECTED = 0;
    DISCONNECTED = 1;
    RECONNECTING = 2;
    TIMEOUT = 3;
  }
  
  Status status = 1;
  string reason = 2;
  google.protobuf.Timestamp last_activity = 3;
  uint32 missed_heartbeats = 4;
}

// ========================================
// Session Management
// ========================================

message SessionInfo {
  string session_token = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp last_activity = 4;
  int32 current_room_id = 5;
  uint32 last_message_sequence = 6;
}

message ReconnectInfo {
  SessionInfo session = 1;
  uint32 missed_message_count = 2;
  repeated MessageWrapper missed_messages = 3;
  bool full_state_required = 4;  // Full state resync required
}

// ========================================
// Message Statistics and Monitoring
// ========================================

message MessageStats {
  MessageType type = 1;
  uint64 sent_count = 2;
  uint64 received_count = 3;
  uint64 error_count = 4;
  float average_latency_ms = 5;
  uint64 total_bytes = 6;
  google.protobuf.Timestamp last_sent = 7;
}

message NetworkStats {
  repeated MessageStats message_stats = 1;
  uint64 total_messages_sent = 2;
  uint64 total_messages_received = 3;
  uint64 total_bytes_sent = 4;
  uint64 total_bytes_received = 5;
  float average_latency_ms = 6;
  uint32 connection_drops = 7;
  google.protobuf.Timestamp session_start = 8;
}